Refactoring notification service (redesign)